crates/resource/tests/probes/derive_on_enum.stderr
error: #[derive(ResourceSlots)] can only be used on structs, not enums
 --> tests/probes/derive_on_enum.rs:7:6
  |
7 | enum NotAStruct {
  |      ^^^^^^^^^^
